--- a/packaging/helm-charts/helm3/strimzi-kafka-operator/crds/040-Crd-kafka.yaml
+++ b/packaging/helm-charts/helm3/strimzi-kafka-operator/crds/040-Crd-kafka.yaml
@@ -1022,13 +1022,11 @@ spec:
                                     properties:
                                       medium:
                                         type: string
+                                        enum:
+                                          - Memory
                                       sizeLimit:
-                                        type: object
-                                        properties:
-                                          amount:
-                                            type: string
-                                          format:
-                                            type: string
+                                        type: string
+                                        pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                                   persistentVolumeClaim:
                                     type: object
                                     properties:
@@ -2497,13 +2495,11 @@ spec:
                                     properties:
                                       medium:
                                         type: string
+                                        enum:
+                                          - Memory
                                       sizeLimit:
-                                        type: object
-                                        properties:
-                                          amount:
-                                            type: string
-                                          format:
-                                            type: string
+                                        type: string
+                                        pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                                   persistentVolumeClaim:
                                     type: object
                                     properties:
@@ -3635,13 +3631,11 @@ spec:
                                     properties:
                                       medium:
                                         type: string
+                                        enum:
+                                          - Memory
                                       sizeLimit:
-                                        type: object
-                                        properties:
-                                          amount:
-                                            type: string
-                                          format:
-                                            type: string
+                                        type: string
+                                        pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                                   persistentVolumeClaim:
                                     type: object
                                     properties:
@@ -4661,13 +4655,11 @@ spec:
                                     properties:
                                       medium:
                                         type: string
+                                        enum:
+                                          - Memory
                                       sizeLimit:
-                                        type: object
-                                        properties:
-                                          amount:
-                                            type: string
-                                          format:
-                                            type: string
+                                        type: string
+                                        pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                                   persistentVolumeClaim:
                                     type: object
                                     properties:
@@ -6291,13 +6283,11 @@ spec:
                                     properties:
                                       medium:
                                         type: string
+                                        enum:
+                                          - Memory
                                       sizeLimit:
-                                        type: object
-                                        properties:
-                                          amount:
-                                            type: string
-                                          format:
-                                            type: string
+                                        type: string
+                                        pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                                   persistentVolumeClaim:
                                     type: object
                                     properties:
@@ -7717,13 +7707,11 @@ spec:
                                     properties:
                                       medium:
                                         type: string
+                                        enum:
+                                          - Memory
                                       sizeLimit:
-                                        type: object
-                                        properties:
-                                          amount:
-                                            type: string
-                                          format:
-                                            type: string
+                                        type: string
+                                        pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                                   persistentVolumeClaim:
                                     type: object
                                     properties:
@@ -8975,13 +8963,11 @@ spec:
                                     properties:
                                       medium:
                                         type: string
+                                        enum:
+                                          - Memory
                                       sizeLimit:
-                                        type: object
-                                        properties:
-                                          amount:
-                                            type: string
-                                          format:
-                                            type: string
+                                        type: string
+                                        pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                                   persistentVolumeClaim:
                                     type: object
                                     properties:
@@ -10327,13 +10313,11 @@ spec:
                                     properties:
                                       medium:
                                         type: string
+                                        enum:
+                                          - Memory
                                       sizeLimit:
-                                        type: object
-                                        properties:
-                                          amount:
-                                            type: string
-                                          format:
-                                            type: string
+                                        type: string
+                                        pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                                   persistentVolumeClaim:
                                     type: object
                                     properties:
@@ -11487,13 +11471,11 @@ spec:
                                     properties:
                                       medium:
                                         type: string
+                                        enum:
+                                          - Memory
                                       sizeLimit:
-                                        type: object
-                                        properties:
-                                          amount:
-                                            type: string
-                                          format:
-                                            type: string
+                                        type: string
+                                        pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                                   persistentVolumeClaim:
                                     type: object
                                     properties:
@@ -12363,13 +12345,11 @@ spec:
                                     properties:
                                       medium:
                                         type: string
+                                        enum:
+                                          - Memory
                                       sizeLimit:
-                                        type: object
-                                        properties:
-                                          amount:
-                                            type: string
-                                          format:
-                                            type: string
+                                        type: string
+                                        pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                                   persistentVolumeClaim:
                                     type: object
                                     properties:
