--- a/api/src/test/resources/crds/v1beta2/041-Crd-kafkaconnect.yaml
+++ b/api/src/test/resources/crds/v1beta2/041-Crd-kafkaconnect.yaml
@@ -907,13 +907,11 @@ spec:
                               properties:
                                 medium:
                                   type: string
+                                  enum:
+                                  - Memory
                                 sizeLimit:
-                                  type: object
-                                  properties:
-                                    amount:
-                                      type: string
-                                    format:
-                                      type: string
+                                  type: string
+                                  pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                             persistentVolumeClaim:
                               type: object
                               properties:
@@ -1894,13 +1892,11 @@ spec:
                               properties:
                                 medium:
                                   type: string
+                                  enum:
+                                  - Memory
                                 sizeLimit:
-                                  type: object
-                                  properties:
-                                    amount:
-                                      type: string
-                                    format:
-                                      type: string
+                                  type: string
+                                  pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                             persistentVolumeClaim:
                               type: object
                               properties:
@@ -3302,13 +3298,11 @@ spec:
                               properties:
                                 medium:
                                   type: string
+                                  enum:
+                                  - Memory
                                 sizeLimit:
-                                  type: object
-                                  properties:
-                                    amount:
-                                      type: string
-                                    format:
-                                      type: string
+                                  type: string
+                                  pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                             persistentVolumeClaim:
                               type: object
                               properties:
@@ -4289,13 +4283,11 @@ spec:
                               properties:
                                 medium:
                                   type: string
+                                  enum:
+                                  - Memory
                                 sizeLimit:
-                                  type: object
-                                  properties:
-                                    amount:
-                                      type: string
-                                    format:
-                                      type: string
+                                  type: string
+                                  pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                             persistentVolumeClaim:
                               type: object
                               properties:
