--- a/api/src/test/resources/crds/v1beta2/045-Crd-kafkanodepool.yaml
+++ b/api/src/test/resources/crds/v1beta2/045-Crd-kafkanodepool.yaml
@@ -772,13 +772,11 @@ spec:
                               properties:
                                 medium:
                                   type: string
+                                  enum:
+                                  - Memory
                                 sizeLimit:
-                                  type: object
-                                  properties:
-                                    amount:
-                                      type: string
-                                    format:
-                                      type: string
+                                  type: string
+                                  pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                             persistentVolumeClaim:
                               type: object
                               properties:
@@ -1958,13 +1956,11 @@ spec:
                               properties:
                                 medium:
                                   type: string
+                                  enum:
+                                  - Memory
                                 sizeLimit:
-                                  type: object
-                                  properties:
-                                    amount:
-                                      type: string
-                                    format:
-                                      type: string
+                                  type: string
+                                  pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                             persistentVolumeClaim:
                               type: object
                               properties:
