--- a/api/src/test/resources/crds/v1beta2/046-Crd-kafkabridge.yaml
+++ b/api/src/test/resources/crds/v1beta2/046-Crd-kafkabridge.yaml
@@ -928,13 +928,11 @@ spec:
                               properties:
                                 medium:
                                   type: string
+                                  enum:
+                                  - Memory
                                 sizeLimit:
-                                  type: object
-                                  properties:
-                                    amount:
-                                      type: string
-                                    format:
-                                      type: string
+                                  type: string
+                                  pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                             persistentVolumeClaim:
                               type: object
                               properties:
@@ -2368,13 +2366,11 @@ spec:
                               properties:
                                 medium:
                                   type: string
+                                  enum:
+                                  - Memory
                                 sizeLimit:
-                                  type: object
-                                  properties:
-                                    amount:
-                                      type: string
-                                    format:
-                                      type: string
+                                  type: string
+                                  pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                             persistentVolumeClaim:
                               type: object
                               properties:
