--- a/packaging/install/cluster-operator/040-Crd-kafka.yaml
+++ b/packaging/install/cluster-operator/040-Crd-kafka.yaml
@@ -1021,13 +1021,11 @@ spec:
                                   properties:
                                     medium:
                                       type: string
+                                      enum:
+                                      - Memory
                                     sizeLimit:
-                                      type: object
-                                      properties:
-                                        amount:
-                                          type: string
-                                        format:
-                                          type: string
+                                      type: string
+                                      pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                                 persistentVolumeClaim:
                                   type: object
                                   properties:
@@ -2496,13 +2494,11 @@ spec:
                                   properties:
                                     medium:
                                       type: string
+                                      enum:
+                                      - Memory
                                     sizeLimit:
-                                      type: object
-                                      properties:
-                                        amount:
-                                          type: string
-                                        format:
-                                          type: string
+                                      type: string
+                                      pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                                 persistentVolumeClaim:
                                   type: object
                                   properties:
@@ -3634,13 +3630,11 @@ spec:
                                   properties:
                                     medium:
                                       type: string
+                                      enum:
+                                      - Memory
                                     sizeLimit:
-                                      type: object
-                                      properties:
-                                        amount:
-                                          type: string
-                                        format:
-                                          type: string
+                                      type: string
+                                      pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                                 persistentVolumeClaim:
                                   type: object
                                   properties:
@@ -4660,13 +4654,11 @@ spec:
                                   properties:
                                     medium:
                                       type: string
+                                      enum:
+                                      - Memory
                                     sizeLimit:
-                                      type: object
-                                      properties:
-                                        amount:
-                                          type: string
-                                        format:
-                                          type: string
+                                      type: string
+                                      pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                                 persistentVolumeClaim:
                                   type: object
                                   properties:
@@ -6290,13 +6282,11 @@ spec:
                                   properties:
                                     medium:
                                       type: string
+                                      enum:
+                                      - Memory
                                     sizeLimit:
-                                      type: object
-                                      properties:
-                                        amount:
-                                          type: string
-                                        format:
-                                          type: string
+                                      type: string
+                                      pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                                 persistentVolumeClaim:
                                   type: object
                                   properties:
@@ -7716,13 +7706,11 @@ spec:
                                   properties:
                                     medium:
                                       type: string
+                                      enum:
+                                      - Memory
                                     sizeLimit:
-                                      type: object
-                                      properties:
-                                        amount:
-                                          type: string
-                                        format:
-                                          type: string
+                                      type: string
+                                      pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                                 persistentVolumeClaim:
                                   type: object
                                   properties:
@@ -8974,13 +8962,11 @@ spec:
                                   properties:
                                     medium:
                                       type: string
+                                      enum:
+                                      - Memory
                                     sizeLimit:
-                                      type: object
-                                      properties:
-                                        amount:
-                                          type: string
-                                        format:
-                                          type: string
+                                      type: string
+                                      pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                                 persistentVolumeClaim:
                                   type: object
                                   properties:
@@ -10326,13 +10312,11 @@ spec:
                                   properties:
                                     medium:
                                       type: string
+                                      enum:
+                                      - Memory
                                     sizeLimit:
-                                      type: object
-                                      properties:
-                                        amount:
-                                          type: string
-                                        format:
-                                          type: string
+                                      type: string
+                                      pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                                 persistentVolumeClaim:
                                   type: object
                                   properties:
@@ -11486,13 +11470,11 @@ spec:
                                   properties:
                                     medium:
                                       type: string
+                                      enum:
+                                      - Memory
                                     sizeLimit:
-                                      type: object
-                                      properties:
-                                        amount:
-                                          type: string
-                                        format:
-                                          type: string
+                                      type: string
+                                      pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                                 persistentVolumeClaim:
                                   type: object
                                   properties:
@@ -12362,13 +12344,11 @@ spec:
                                   properties:
                                     medium:
                                       type: string
+                                      enum:
+                                      - Memory
                                     sizeLimit:
-                                      type: object
-                                      properties:
-                                        amount:
-                                          type: string
-                                        format:
-                                          type: string
+                                      type: string
+                                      pattern: "^([0-9.]+)([eEinumkKMGTP]*[-+]?[0-9]*)$"
                                 persistentVolumeClaim:
                                   type: object
                                   properties:
