--- a/systemtest/src/main/resources/log4j2.properties
+++ b/systemtest/src/main/resources/log4j2.properties
@@ -20,7 +20,7 @@ rootLogger.level = ${env:STRIMZI_TEST_ROOT_LOG_LEVEL:-DEBUG}
 rootLogger.appenderRef.console.ref = STDOUT
 rootLogger.appenderRef.console.level = ${env:STRIMZI_TEST_LOG_LEVEL:-INFO}
 rootLogger.appenderRef.rolling.ref = RollingFile
-rootLogger.appenderRef.rolling.level = DEBUG
+rootLogger.appenderRef.rolling.level = TRACE
 rootLogger.additivity = false
 
 logger.clients.name = org.apache.kafka.clients
