--- a/packaging/examples/security/scram-sha-512-auth/connect.yaml
+++ b/packaging/examples/security/scram-sha-512-auth/connect.yaml
@@ -1,4 +1,4 @@
-apiVersion: kafka.strimzi.io/v1beta2
+apiVersion: kafka.strimzi.io/v1
 kind: KafkaUser
 metadata:
   name: my-connect
@@ -56,7 +56,7 @@ spec:
         - Read
         - Write
 ---
-apiVersion: kafka.strimzi.io/v1beta2
+apiVersion: kafka.strimzi.io/v1
 kind: KafkaConnect
 metadata:
   name: my-connect
