--- a/packaging/examples/security/tls-auth/bridge.yaml
+++ b/packaging/examples/security/tls-auth/bridge.yaml
@@ -1,4 +1,4 @@
-apiVersion: kafka.strimzi.io/v1beta2
+apiVersion: kafka.strimzi.io/v1
 kind: KafkaUser
 metadata:
   name: my-bridge
@@ -26,7 +26,7 @@ spec:
         - Write
         - Create
 ---
-apiVersion: kafka.strimzi.io/v1beta2
+apiVersion: kafka.strimzi.io/v1
 kind: KafkaBridge
 metadata:
   name: my-bridge
