Update doc and re-render CRD
Signed-off-by: Venkatesh Kannan <venkatesprasad512@gmail.com>

--- a/api/src/test/resources/crds/v1/045-Crd-kafkanodepool.yaml
+++ b/api/src/test/resources/crds/v1/045-Crd-kafkanodepool.yaml
@@ -98,6 +98,9 @@ spec:
                     - persistent-claim
                     - jbod
                     description: "Storage type, must be either 'ephemeral', 'persistent-claim', or 'jbod'."
+                  volumeAttributesClass:
+                    type: string
+                    description: Specifies `VolumeAttributeClass` name for dynamically configuring storage attributes.
                   volumes:
                     type: array
                     items:
@@ -136,6 +139,9 @@ spec:
                           - ephemeral
                           - persistent-claim
                           description: "Storage type, must be either 'ephemeral' or 'persistent-claim'."
+                        volumeAttributesClass:
+                          type: string
+                          description: Specifies `VolumeAttributeClass` name for dynamically configuring storage attributes.
                       required:
                       - type
                     description: List of volumes as Storage objects representing the JBOD disks array.
