--- a/api/src/test/resources/crds/v1beta2/040-Crd-kafka.yaml
+++ b/api/src/test/resources/crds/v1beta2/040-Crd-kafka.yaml
@@ -5396,6 +5396,8 @@ spec:
                         - ephemeral
                         - persistent-claim
                         - jbod
+                      volumeAttributesClass:
+                        type: string
                       volumes:
                         type: array
                         items:
@@ -5435,6 +5437,8 @@ spec:
                               enum:
                               - ephemeral
                               - persistent-claim
+                            volumeAttributesClass:
+                              type: string
                           required:
                           - type
                     required:
@@ -6944,6 +6948,8 @@ spec:
                         enum:
                         - ephemeral
                         - persistent-claim
+                      volumeAttributesClass:
+                        type: string
                     required:
                     - type
                   config:
