--- a/packaging/install/cluster-operator/045-Crd-kafkanodepool.yaml
+++ b/packaging/install/cluster-operator/045-Crd-kafkanodepool.yaml
@@ -100,7 +100,7 @@ spec:
                     description: "Storage type, must be either 'ephemeral', 'persistent-claim', or 'jbod'."
                   volumeAttributesClass:
                     type: string
-                    description: Specifies `VolumeAttributeClass` name for dynamic volume allocation.
+                    description: Specifies `VolumeAttributeClass` name for dynamically configuring storage attributes.
                   volumes:
                     type: array
                     items:
@@ -141,7 +141,7 @@ spec:
                           description: "Storage type, must be either 'ephemeral' or 'persistent-claim'."
                         volumeAttributesClass:
                           type: string
-                          description: Specifies `VolumeAttributeClass` name for dynamic volume allocation.
+                          description: Specifies `VolumeAttributeClass` name for dynamically configuring storage attributes.
                       required:
                       - type
                     description: List of volumes as Storage objects representing the JBOD disks array.
@@ -1393,7 +1393,7 @@ spec:
                     description: "Storage type, must be either 'ephemeral', 'persistent-claim', or 'jbod'."
                   volumeAttributesClass:
                     type: string
-                    description: Specifies `VolumeAttributeClass` name for dynamic volume allocation.
+                    description: Specifies `VolumeAttributeClass` name for dynamically configuring storage attributes.
                   volumes:
                     type: array
                     items:
@@ -1446,7 +1446,7 @@ spec:
                           description: "Storage type, must be either 'ephemeral' or 'persistent-claim'."
                         volumeAttributesClass:
                           type: string
-                          description: Specifies `VolumeAttributeClass` name for dynamic volume allocation.
+                          description: Specifies `VolumeAttributeClass` name for dynamically configuring storage attributes.
                       required:
                       - type
                     description: List of volumes as Storage objects representing the JBOD disks array.
